--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/renderer.js"></script>
+  <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
